[gd_scene load_steps=8 format=3 uid="uid://07eq8jk5yhlc"]

[ext_resource type="Script" uid="uid://ooin18yapr2p" path="res://scripts/ui/components/ChargeMeter.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://b87fjwx31kgm0" path="res://assets/fonts/GlitchGoblin.ttf" id="2_font"]
[ext_resource type="Texture2D" uid="uid://c4fnaflk8c7oa" path="res://assets/art/vfx/neon_meter.png" id="3_2vn48"]

[sub_resource type="Theme" id="Theme_meter_label"]
default_font = ExtResource("2_font")
default_font_size = 22

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_charge_bg"]
bg_color = Color(0.101961, 0.101961, 0.137255, 0.796078)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ahoco"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_charge_fill"]
bg_color = Color(1, 0.45098, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.662745, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="ChargeMeter" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource("1_script")

[node name="MeterContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MeterLabel" type="Label" parent="MeterContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = SubResource("Theme_meter_label")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 1, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 0
text = "CHARGE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MeterProgress" type="Control" parent="MeterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MeterBG" type="Panel" parent="MeterContainer/MeterProgress"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_charge_bg")

[node name="ChargeMeter" type="ProgressBar" parent="MeterContainer/MeterProgress"]
material = SubResource("ShaderMaterial_ahoco")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_charge_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_charge_fill")
value = 25.0
show_percentage = false

[node name="ChargeOverlay" type="TextureRect" parent="MeterContainer/MeterProgress"]
layout_mode = 0
offset_left = 0.5
offset_top = -52.0
offset_right = 634.5
offset_bottom = 183.0
scale = Vector2(0.42, 0.4)
texture = ExtResource("3_2vn48")
stretch_mode = 5

[node name="ReadyLabel" type="Label" parent="MeterContainer/MeterProgress"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = -13.0
offset_right = 35.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.75, 1.75)
pivot_offset = Vector2(35, 13)
theme = SubResource("Theme_meter_label")
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0.239216, 0, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("2_font")
text = "READY!"
horizontal_alignment = 1
vertical_alignment = 1
